Team Page + color name + improv project strutcture

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,6 +1,6 @@
 footer {
     height: 50px;
-    background: var(--bg-color-footer);
+    background: var(--bg-gray-dark);
     display: flex;
     justify-content: center;
     align-items: center;
