--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -45,7 +45,7 @@ header {
             justify-content: center;
             font-size: 1.2rem;
             font-weight: 700;
-            color: var(--text-primary);
+            color: var(--black);
         }
     }
 }
