--- a/styles/home-style.scss
+++ b/styles/home-style.scss
@@ -1,12 +1,4 @@
-.main {
-    background: var(--bg-color-main);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 50px;
-    column-gap: 50px;
-    width: 100%;
-
+#homePage {
     div.right {
         flex: 1;
         display: flex;
@@ -31,7 +23,7 @@
                     display: flex;
                     flex-direction: column;
                     row-gap: 4px;
-                    background-color: var(--bg-color-dark);
+                    background-color: var(--bg-gray-dark);
                     border-radius: 10px;
                     padding: 5px;
 
@@ -66,14 +58,14 @@
             &.horizontal-divider {
                 background: linear-gradient(rgba(247, 243, 247, 0.2) 50%, rgba(247, 243, 247, 0.2) 50%) 0 50% / 100% 0.1em,
                             radial-gradient(100% 100%, transparent 2.5em, rgba(247, 243, 247, 0.2) 2.55em, rgba(247, 243, 247, 0.2) 2.6em, transparent 0.5em) calc(50% - 1em) 50% / 6.25em 6.25em,
-                            linear-gradient(to bottom, var(--pink-light), var(--purple-blue)) 0 0 / 100% 100%;
+                            linear-gradient(to bottom, var(--purple-light), var(--purple-blue)) 0 0 / 100% 100%;
                 background-repeat: no-repeat;
             }
 
             &.vertical-divider {
                 background: linear-gradient(rgba(247, 243, 247, 0.2) 50%, rgba(247, 243, 247, 0.2) 50%) calc(50% - 1em) 0 / 0.1em 100%,
                             radial-gradient(100% 100%, transparent 2.5em, rgba(247, 243, 247, 0.2) 2.55em, rgba(247, 243, 247, 0.2) 2.6em, transparent 0.5em) calc(50% - 1em) 50% / 6.25em 6.25em,
-                            linear-gradient(to bottom, var(--pink-light), var(--purple-blue)) 0 0 / 100% 100%;
+                            linear-gradient(to bottom, var(--purple-light), var(--purple-blue)) 0 0 / 100% 100%;
                 background-repeat: no-repeat;
             }
 
@@ -87,8 +79,8 @@
                     align-items: center;
                     height: 110px;
                     width: 110px;
-                    background-color: var(--bg-color-main);
-                    color: var(--text-primary);
+                    background-color: var(--gray-lighter);
+                    color: var(--black);
                     border-radius: 50%;
                     border: 3px solid var(--pink);
                     font-size: 1.75rem;
@@ -106,7 +98,7 @@
             }
 
             .most-picked {
-                border: 3px dashed var(--pink-light);
+                border: 3px dashed var(--purple-light);
                 padding: 5px;
                 border-radius: 50%;
             }
@@ -114,48 +106,20 @@
         }
     }
 
-    section.info-block {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        background-color: var(--white);
+    .btn-add-team {
+        text-decoration: none;
+        background: linear-gradient(to bottom, var(--purple-light), var(--purple));
+        padding: 10px;
         border-radius: 10px;
-        box-shadow: 0px 3px 15px -5px var(--box-shadow);
-        overflow: hidden;
-
-        div.header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 25px;
-            height: 80px;
-            border-bottom: 2px solid var(--bg-color-main);
-
-            h2 {
-                color: var(--purple-blue);
-                font-weight: 600;
-                font-size: 1.25rem;
-            }
-
-            .btn-add-team {
-                background: linear-gradient(to bottom, var(--pink-light), var(--purple));
-                padding: 10px;
-                border-radius: 10px;
-                width: 40px;
-                height: 40px;
-                color: var(--white);
-                font-size: 2rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                user-select: none;
-                cursor: pointer;
-            }
-        }
-
-        div.content {
-            padding: 20px 10px;
-        }
+        width: 40px;
+        height: 40px;
+        color: var(--white);
+        font-size: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        user-select: none;
+        cursor: pointer;
     }
 
     // Table Style
@@ -171,7 +135,7 @@
                 text-align: start;
                 
                 &:first-child {
-                    border-right: 1px var(--bg-color-dark) solid;
+                    border-right: 1px var(--bg-gray-dark) solid;
                 }
 
                 img {
@@ -191,12 +155,12 @@
         tbody {
             td {
                 padding: 20px;
-                border-bottom: 1px solid var(--bg-color-dark);
+                border-bottom: 1px solid var(--bg-gray-dark);
             }
 
             tr:hover td {
-                color: var(--pink-light);
-                background-color: var(--bg-color-table);
+                color: var(--purple-light);
+                background-color: var(--pink-light);
                 border-bottom: 1px solid transparent;
                     
                 &:first-child {
