--- a/styles/home-style.scss
+++ b/styles/home-style.scss
@@ -28,16 +28,19 @@
                     padding: 5px;
 
                     li {
-                        display: flex;
-                        justify-content: space-between;
-                        padding: 10px;
-                        background-color: var(--white);
-                        border-radius: 5px;
-                        border: 1px solid transparent;
+                        a {
+                            display: flex;
+                            justify-content: space-between;
+                            padding: 10px;
+                            background-color: var(--white);
+                            border-radius: 5px;
+                            border: 1px solid transparent;
+                            text-decoration: none;
+                            color: inherit;
 
-                        &:hover {
-                            border: 1px solid var(--pink);
-                            cursor: pointer;
+                            &:hover {
+                                border: 1px solid var(--pink);
+                            }
                         }
                     }
                 }
@@ -138,7 +141,7 @@
                     border-right: 1px var(--bg-gray-dark) solid;
                 }
 
-                img {
+                i {
                     width: 0.625rem;
                     float: right;
                     cursor: pointer;
