--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,13 +1,19 @@
+@import '../../../styles/config/breakpoints';
+
 header {
-    display: flex;
-    flex-wrap: wrap;
+    display: flex;    
     background: linear-gradient(to right, var(--pink), var(--purple));
     color: var(--white);
     align-items: center;
     justify-content: space-between;
-    padding: 10px 50px;
+    padding: 10px;
+    gap: 5px;
     position: relative;
     box-shadow: 0px 1px 2px 0px var(--box-shadow);
+
+    @include sm {
+        padding: 10px 50px;
+    }
 
     .header-brand {
         a {
@@ -34,8 +40,16 @@ header {
         align-items: center;
         column-gap: 10px;
 
-        p {
+        span {
             font-weight: 600;
+        }
+
+        .name {
+            display: none;
+
+            @include sm {
+                display: flex;
+            }
         }
 
         div {
