--- a/src/styles/scss/team-style.scss
+++ b/src/styles/scss/team-style.scss
@@ -2,9 +2,12 @@
 
 #teamPage {
     form {
-        @include lg {
-            width: 80%;
+        @include md {
+            width: 90%;
             margin: 0 auto;
+        }
+        @include xl {
+            width: 80%;
         }
 
         section > h2 {
@@ -91,6 +94,36 @@
                     color: var(--pink);
                 }
             }
+
+            .input-tag {
+                height: 120px;
+                border: 1px solid var(--gray-light);
+                border-radius: 5px;
+                overflow: hidden;
+
+                .tag-list {
+                    padding: 10px;
+                    height: 120px;
+
+                    .tag {
+                        border-radius: 15px;
+                        display: inline-flex;
+                        gap: 10px;
+                        padding: 4px 8px;
+                        color: var(--white);
+                        background-color: var(--pink);
+                    }
+
+                    input {
+                        appearance: none;
+                        border: 0;
+
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+                }
+            }
         }
 
         .team-information {
@@ -141,6 +174,23 @@
             background: linear-gradient(var(--purple-light), var(--purple));
             border-radius: 5px;
             display: grid;
+            grid-template-areas:
+                "P1 P2 P3"
+                "P4 . P5"
+                "P6 . P7"
+                "P8 P9 P10"
+                " . P11 . ";
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+            gap: 10px 10px;
+            justify-items: center;
+            align-items: center;
+
+            @for $i from 1 through 11 {
+                .P#{$i} {
+                    grid-area: P#{$i};
+                }
+            }
 
             &.horizontal-divider {
                 background: linear-gradient(var(--gray-transparent) 50%, var(--gray-transparent) 50%) 0 50% / 100% 0.1em,
@@ -148,9 +198,28 @@
                             linear-gradient(to bottom, var(--purple-light), var(--purple-blue)) 0 0 / 100% 100%;
                             background-repeat: no-repeat;
             }
+
+            .player-circle {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: var(--white);
+                width: 70px;
+                height: 70px;
+                background-color: rgba(255, 255, 255, 0.7);
+                border: 1px solid var(--black);
+                border-radius: 50%;
+                margin: 10px;
+                outline: 2px dashed var(--purple);
+                outline-offset: 5px;
+            }
         }
 
         .search-players-results {
+            max-height: 700px;
+            overflow-y: auto;
+            padding: 10px;
+
             ul.players-list {
                 display: flex;
                 flex-direction: column;
