--- a/src/styles/scss/team-style.scss
+++ b/src/styles/scss/team-style.scss
@@ -100,11 +100,14 @@
                 height: 120px;
                 border: 1px solid var(--gray-light);
                 border-radius: 5px;
-                overflow: hidden;
+                overflow: auto;
 
                 .tag-list {
                     padding: 10px;
-                    height: 120px;
+                    display: inline-flex;
+                    flex-wrap: wrap;
+                    align-items: flex-start;
+                    gap: 10px;
 
                     .tag {
                         border-radius: 15px;
@@ -114,16 +117,17 @@
                         color: var(--white);
                         background-color: var(--pink);
                     }
+                }
 
-                    input {
-                        -moz-appearance: none;
-                        -webkit-appearance: none;
-                        appearance: none;
-                        border: 0;
+                input {
+                    -moz-appearance: none;
+                    -webkit-appearance: none;
+                    appearance: none;
+                    border: 0;
+                    width: 25%;
 
-                        &:focus {
-                            outline: none;
-                        }
+                    &:focus {
+                        outline: none;
                     }
                 }
             }
