--- a/src/styles/css/team-style.css
+++ b/src/styles/css/team-style.css
@@ -90,22 +90,15 @@
   align-items: flex-start;
   gap: 10px;
 }
-#teamPage form .form-group .input-tag .tag-list .tag {
-  border-radius: 15px;
-  display: inline-flex;
-  gap: 10px;
-  padding: 4px 8px;
-  color: var(--white);
-  background-color: var(--pink);
-}
-#teamPage form .form-group .input-tag input {
+#teamPage form .form-group .input-tag .tag-list input {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
   border: 0;
   width: 25%;
+  padding: 0;
 }
-#teamPage form .form-group .input-tag input:focus {
+#teamPage form .form-group .input-tag .tag-list input:focus {
   outline: none;
 }
 @media (min-width: 768px) {
@@ -129,7 +122,7 @@
 #teamPage form .configure-squad h2 {
   margin-top: 30px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #teamPage form .configure-squad h2 {
     margin-top: 60px;
   }
@@ -147,12 +140,16 @@
   background: linear-gradient(var(--purple-light), var(--purple));
   border-radius: 5px;
   display: grid;
-  grid-template-areas: "P1 P2 P3" "P4 . P5" "P6 . P7" "P8 P9 P10" " . P11 . ";
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   gap: 10px 10px;
   justify-items: center;
   align-items: center;
+}
+@media (min-width: 768px) {
+  #teamPage form .soccer-field {
+    min-width: 490px;
+  }
 }
 #teamPage form .soccer-field .P1 {
   grid-area: P1;
@@ -187,6 +184,44 @@
 #teamPage form .soccer-field .P11 {
   grid-area: P11;
 }
+#teamPage form .soccer-field.formation-3-2-2-3 {
+  grid-template-areas: " P1 . P2 . P3 " " . P4 . P5 . " " . P6 . P7 . " " P8 . P9 . P10 " " . . P11 . . ";
+}
+#teamPage form .soccer-field.formation-3-2-3-2 {
+  grid-template-areas: " . P1 . P2 . " " P3 . P4 . P5 " " . P6 . P7 . " " P8 . P9 . P10 " " . . P11 . . ";
+}
+#teamPage form .soccer-field.formation-3-5-2 {
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 . P2 . " " P3 . . . P4 " " . P5 . P6 . " " . . P7 . . " " . P8 P9 P10 . " " . . P11 . . ";
+}
+#teamPage form .soccer-field.formation-4-2-3-1 {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 P1 . " " P2 P3 P3 P4 " " . P5 P6 . " " P7 P8 P9 P10 " " . P11 P11 . ";
+}
+#teamPage form .soccer-field.formation-4-3-1-2 {
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 . . P2 . " " . . P3 P3 . . " " . P4 . . P5 . " " . . P6 P6 . . " " . P7 P8 P9 P10 . " " . . P11 P11 . . ";
+}
+#teamPage form .soccer-field.formation-4-3-2-1 {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 P1 . " " P2 P2 P3 P3 " " P4 P5 P5 P6 " " P7 P8 P9 P10 " " . P11 P11 . ";
+}
+#teamPage form .soccer-field.formation-4-4-2 {
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 P2 . " " P3 P4 P5 P6 " " P7 P8 P9 P10 " " . P11 P11 . ";
+}
+#teamPage form .soccer-field.formation-4-5-1 {
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 P1 . " " P2 . . P3 " " P4 P4 P5 P5 " " . P6 P6 . " " P7 P8 P9 P10 " " . P11 P11 . ";
+}
+#teamPage form .soccer-field.formation-5-4-1 {
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: " . P1 P1 . " " P2 P3 P4 P5 " " P6 . . P7 " " P8 P8 P9 P9 " " . P10 P10 . " " . P11 P11 . ";
+}
 #teamPage form .soccer-field.horizontal-divider {
   background: linear-gradient(var(--gray-transparent) 50%, var(--gray-transparent) 50%) 0 50%/100% 0.1em, radial-gradient(transparent 3em, var(--gray-transparent) 3.15em, transparent 0.5em) 50% 50%/10em 10em, linear-gradient(to bottom, var(--purple-light), var(--purple-blue)) 0 0/100% 100%;
   background-repeat: no-repeat;
@@ -196,14 +231,20 @@
   justify-content: center;
   align-items: center;
   color: var(--white);
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid var(--black);
   border-radius: 50%;
   margin: 10px;
   outline: 2px dashed var(--purple);
   outline-offset: 5px;
+}
+@media (min-width: 576px) {
+  #teamPage form .soccer-field .player-circle {
+    width: 70px;
+    height: 70px;
+  }
 }
 #teamPage form .soccer-field .player-circle:empty::before {
   content: "+";
@@ -231,6 +272,17 @@
   justify-content: space-between;
   min-height: 80px;
   overflow: hidden;
+  position: relative;
+  user-select: none;
+}
+#teamPage form .search-players-results ul.players-list li.player-infos.disabled::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(255, 255, 255, 0.7);
 }
 #teamPage form .search-players-results ul.players-list li.player-infos span {
   color: var(--pink);
@@ -259,9 +311,10 @@
   border: 1px solid var(--pink);
   cursor: pointer;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #teamPage form button {
     width: calc(50% - 25px);
+    min-width: 490px;
   }
 }
 
