--- a/src/styles/scss/team-style.scss
+++ b/src/styles/scss/team-style.scss
@@ -109,25 +109,17 @@
                     align-items: flex-start;
                     gap: 10px;
 
-                    .tag {
-                        border-radius: 15px;
-                        display: inline-flex;
-                        gap: 10px;
-                        padding: 4px 8px;
-                        color: var(--white);
-                        background-color: var(--pink);
-                    }
-                }
-
-                input {
-                    -moz-appearance: none;
-                    -webkit-appearance: none;
-                    appearance: none;
-                    border: 0;
-                    width: 25%;
-
-                    &:focus {
-                        outline: none;
+                    input {
+                        -moz-appearance: none;
+                        -webkit-appearance: none;
+                        appearance: none;
+                        border: 0;
+                        width: 25%;
+                        padding: 0;
+    
+                        &:focus {
+                            outline: none;
+                        }
                     }
                 }
             }
@@ -160,7 +152,7 @@
                 margin-top: 30px;
             }
 
-            @include md {
+            @include lg {
                 h2 {
                     margin-top: 60px;
                 }
@@ -181,22 +173,115 @@
             background: linear-gradient(var(--purple-light), var(--purple));
             border-radius: 5px;
             display: grid;
-            grid-template-areas:
-                "P1 P2 P3"
-                "P4 . P5"
-                "P6 . P7"
-                "P8 P9 P10"
-                " . P11 . ";
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
             gap: 10px 10px;
             justify-items: center;
             align-items: center;
 
+            @include md {
+                min-width: 490px;
+            }
+
             @for $i from 1 through 11 {
                 .P#{$i} {
                     grid-area: P#{$i};
                 }
+            }
+
+            &.formation-3-2-2-3 {
+                grid-template-areas:
+                    " P1 . P2 . P3 "
+                    " . P4 . P5 . "
+                    " . P6 . P7 . "
+                    " P8 . P9 . P10 "
+                    " . . P11 . . ";
+            }
+
+            &.formation-3-2-3-2 {
+                grid-template-areas:
+                    " . P1 . P2 . "
+                    " P3 . P4 . P5 "
+                    " . P6 . P7 . "
+                    " P8 . P9 . P10 "
+                    " . . P11 . . ";
+            }
+
+            &.formation-3-5-2 {
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 . P2 . "
+                    " P3 . . . P4 "
+                    " . P5 . P6 . "
+                    " . . P7 . . "
+                    " . P8 P9 P10 . "
+                    " . . P11 . . ";
+            }
+
+            &.formation-4-2-3-1 {
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 P1 . "
+                    " P2 P3 P3 P4 "
+                    " . P5 P6 . "
+                    " P7 P8 P9 P10 "
+                    " . P11 P11 . ";
+            }
+
+            &.formation-4-3-1-2 {
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 . . P2 . "
+                    " . . P3 P3 . . "
+                    " . P4 . . P5 . "
+                    " . . P6 P6 . . "
+                    " . P7 P8 P9 P10 . "
+                    " . . P11 P11 . . ";
+            }
+
+            &.formation-4-3-2-1 {
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 P1 . "
+                    " P2 P2 P3 P3 "
+                    " P4 P5 P5 P6 "
+                    " P7 P8 P9 P10 "
+                    " . P11 P11 . ";
+            }
+
+            &.formation-4-4-2 {
+                grid-template-rows: 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 P2 . "
+                    " P3 P4 P5 P6 "
+                    " P7 P8 P9 P10 "
+                    " . P11 P11 . ";
+            }
+
+            &.formation-4-5-1 {
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 P1 . "
+                    " P2 . . P3 "
+                    " P4 P4 P5 P5 "
+                    " . P6 P6 . "
+                    " P7 P8 P9 P10 "
+                    " . P11 P11 . ";
+            }
+
+            &.formation-5-4-1 {
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-areas:
+                    " . P1 P1 . "
+                    " P2 P3 P4 P5 "
+                    " P6 . . P7 "
+                    " P8 P8 P9 P9 "
+                    " . P10 P10 . "
+                    " . P11 P11 . ";
             }
 
             &.horizontal-divider {
@@ -211,14 +296,19 @@
                 justify-content: center;
                 align-items: center;
                 color: var(--white);
-                width: 70px;
-                height: 70px;
+                width: 50px;
+                height: 50px;
                 background-color: rgba(255, 255, 255, 0.7);
                 border: 1px solid var(--black);
                 border-radius: 50%;
                 margin: 10px;
                 outline: 2px dashed var(--purple);
                 outline-offset: 5px;
+
+                @include sm {
+                    width: 70px;
+                    height: 70px;
+                }
 
                 &:empty {
                     &::before {
@@ -251,6 +341,20 @@
                     justify-content: space-between;
                     min-height: 80px;
                     overflow: hidden;
+                    position: relative;
+                    user-select: none;
+
+                    &.disabled {
+                        &::before {
+                            content:'';
+                            width:100%;
+                            height:100%;    
+                            position:absolute;
+                            left:0;
+                            top:0;
+                            background: rgba(255, 255, 255, 0.7);
+                        }
+                    }
 
                     span {
                         color: var(--pink);
@@ -283,9 +387,10 @@
             border-radius: 5px;
             border: 1px solid var(--pink);
             cursor: pointer;
-
-            @include md {
+            
+            @include lg {
                 width: calc(50% - 25px);
+                min-width: 490px;
             }
         }
     }
